pointing the url to my forked branch for pipeline use

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "name": "serverless-fargate-tasks",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/svdgraaf/serverless-fargate-tasks.git"
+    "url": "git+https://github.com/samlevine/serverless-fargate-tasks.git#forkdev"
   },
   "scripts": {
   },
